2008-05-22  Wenji Huang <wenji.huang@oracle.com>

	* tapsets.cxx (iterate_over_functions): Fix .statement(NUM) regression.

2008-05-22  Ananth N Mavinakayanahalli <ananth@in.ibm.com>

	* tapset/ppc64/registers.stp: Support powerpc register + arg lookup
	* stapfuncs.5.in: Add powerpc bits; indicate scope of uarg_* access

2008-05-20  Frank Ch. Eigler  <fche@elastic.org>

	PR 6538
	* elaborate.cxx (semantic_pass_opt2): Warn about read-only locals and
	globals.
	(visit_foreach_loop): Belatedly recognize index symbols as lvalues.

2008-05-21  Stan Cox  <scox@redhat.com>

	* elaborate.cxx (dead_assignment_remover::visit_binary_expression): New.
	(dead_assignment_remover::visit_assignment): Allow rhs simplification.
	
2008-05-20  Tim Moore  <timoore@redhat.com>

	* configure.ac: Check for tr1/unordered_map header.
	* tapsets.cxx: Use tr1::unordered_map if available.
	* configure, config.in: Regenerated.

2008-05-19  Stan Cox  <scox@redhat.com>

	* elaborate.cxx (dead_assignment_remover::visit_arrayindex): New method.
	(dead_assignment_remover::visit_functioncall): New method.
	(dead_assignment_remover::visit_if_statement): New method.
	(dead_assignment_remover::visit_for_loop): New method.

2008-05-19  William Cohen  <wcohen@redhat.com>

	* main.cxx (setup_signals): Remove sa_restorer initialization.

2008-05-17  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (semantic_pass): Error on #probes=0, but not in
	listing mode.
	(semantic_pass_optimize[12]): Remove inappropriate check from here.

2008-05-17  Frank Ch. Eigler  <fche@elastic.org>

	* tapsets.cxx (cu_function_cache_t): Switch to <ext/hash_map>s,
	since these tables tend to get pretty big.

2008-05-16  Frank Ch. Eigler  <fche@elastic.org>

	PR 5643
	* tapsets.cxx (cu_function_cache_t): Reorganize into
	mod:cu->function->DIE lookup table.  Consider merging into symtab
	later.
	(mark_dwarf_redudancies): Adapt.
	(iterate_over_functions): Rewrite.
	(dwarf_builder::build): Cache kprobes etc. symbol addresses.